Resolve alignment issues

--- a/src/sass/layout/_home_section.sass
+++ b/src/sass/layout/_home_section.sass
@@ -1,9 +1,11 @@
 .home-template
 
   section
-    > .wrapper
+    > .cards-wrapper, .wrapper
       @include outer-container
-      padding: 40px 0
+
+    > .wrapper
+      padding: 40px 18px
 
     .btn
       margin: 20px 0
