--- a/src/sass/layout/_tag.sass
+++ b/src/sass/layout/_tag.sass
@@ -1,17 +1,8 @@
-#tag-page
+.tag-page
   @include outer-container
   margin-top: 30px
 
-  h1
-    font-size: 40px
-
-  h2
-    font-size: 30px
-
-  p
-    font-size: 20px
-
-  img
+  > header img
     display: block
     max-width: 100%
     margin: 0 auto
